@@ -36,8 +36,9 @@ sub import {
   require Test::File::ShareDir::Object::Dist;
 
   my $params = {};
-  my $guard;
-  $guard = delete $input_config{-guard} if exists $input_config{-guard};
+  my ( $guard, $clearer );
+  $guard   = delete $input_config{-guard}   if exists $input_config{-guard};
+  $clearer = delete $input_config{-clearer} if exists $input_config{-clearer};
 
   for my $key ( keys %input_config ) {
     next unless $key =~ /\A-(.*)\z/msx;
@@ -55,6 +56,9 @@ sub import {
     require Scope::Guard;
     ${$guard} = Scope::Guard->new( _mk_clearer($dist_object) );
   }
+  if ($clearer) {
+    ${$clearer} = _mk_clearer($dist_object);
+  }
   return 1;
 }
 
@@ -70,6 +74,7 @@ sub _mk_clearer {
 
     use Test::File::ShareDir::Dist {
       '-root'                 => 'some/root/path',    # optional
+      '-clearer'              => \$clearer,           # optional
       'Dist-Zilla-Plugin-Foo' => 'share/DZPF',
     };
 
@@ -78,7 +83,7 @@ C<-root> is optional, and defaults to C<cwd>. ( See L<Test::File::ShareDir/-root
 B<NOTE:> There's a bug prior to 5.18 with C<< use Foo { -key => } >>, so for backwards compatibility, make sure you either quote
 the key: C<< use Foo { '-key' => } >>, or make it the non-first key.
 
-I<Since 1.001000:>
+I<Since 1.001000:> C<-clearer> is optional, and if set, will be vivified to a C<CodeRef>. ( See L<Test::File::ShareDir/-clearer> )
 
 B<EXPERIMENTAL> I<Since 1.001000:> C<-guard> is optional, and if set, will be vivified to a C<Scope::Guard>. ( See L<Test::File::ShareDir/-guard> for B<EXPERIMENTAL> details )
 
